Refactored VoteSystem, VotingResult and more more

--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,7 @@
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
         </dependency>
-
+        <!--Test-->
         <dependency>
             <groupId>io.rest-assured</groupId>
             <artifactId>rest-assured</artifactId>
