--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.datasource.driver-class-name=org.hsqldb.jdbc.JDBCDriver
 #spring.datasource.url=jdbc:postgresql://localhost:5432/voting
-spring.datasource.url=jdbc:hsqldb:mem:voting;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.url=jdbc:hsqldb:mem:voting;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.username=sa
 spring.datasource.password=
-spring.datasource.initialization-mode=always
-spring.datasource.platform=hsqldb
+spring.sql.init.mode=always
+spring.sql.init.platform=hsqldb
 #spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 #spring.jpa.properties.hibernate.show_sql=true
 #spring.jpa.properties.hibernate.use_sql_comments=true
