code cleanup + небольшой рефакторинг

--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,12 @@
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 
+        <!--        jackson-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-hibernate5</artifactId>
+        </dependency>
+
         <!--DB-->
         <dependency>
             <groupId>org.hsqldb</groupId>
