--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,18 @@
             <artifactId>jackson-datatype-hibernate5</artifactId>
         </dependency>
 
+        <!--Swagger-->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.5.10</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-security</artifactId>
+            <version>1.5.10</version>
+        </dependency>
+
         <!--DB-->
         <dependency>
             <groupId>org.hsqldb</groupId>
